tests/fixtures/batch-collections/invalid-files/malformed-json.bru
meta {
  name: Malformed JSON
  type: http
  seq: 3
}

post {
  url: https://api.example.com/data
  body: json
  auth: none
}

body:json {
  {
    "invalid": json syntax
  }
}
